syntax = "proto3";

import "google/protobuf/empty.proto";

package reviews;

enum ProfileType {
    PARENT = 0;
    SITTER = 1;
}

message Error {
  string code = 1;
  string message = 2;
}

message Review {
  int32 id = 1;
  int32 profileFromId = 2;
  int32 profileToId = 3;
  ProfileType profileToType = 4;
  string text = 5;
  int32 stars = 6;
}

message GetReviewsArg {
  int32 profileToId = 1;
}

message PutReviewResult {
  optional Review data = 1;
  optional Error _error = 100;
}

message GetReviewsResult {
  repeated Review data = 1;
  optional Error _error = 100;
}

service ProfileReviewsRpcService {
  rpc put (Review) returns (PutReviewResult);
  rpc getList (GetReviewsArg) returns (GetReviewsResult);
}
